--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
-@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@400;600&display=swap");
 
-body {
+/* @import url("https://fonts.googleapis.com/css2?family=Archivo:wght@400;600&display=swap"); */
+
+/* body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
+} */
